--- a/app/views/reminders/index.html.erb
+++ b/app/views/reminders/index.html.erb
@@ -7,15 +7,28 @@
       <th class="border border-slate-300 w-2/8">Page Number</th>
       <th class="border border-slate-300 w-3/8">Created At</th>
       <th class="border border-slate-300 w-3/8">Edit</th>
+      <th class="border border-slate-300 w-3/8">Delete</th>
     </tr>
   </thead>
   <tbody>
     <% @reminders.each do |reminder| %>
       <tr>
-        <td class="border border-slate-300 w-3/8"><%= reminder.url %></td>
+        <td class="border border-slate-300 w-3/8 text-blue-700">
+          <a href="<%= format_url(reminder.url) %>" target="_blank">
+            <%= format_url(reminder.url) %>
+          </a>
+        </td>
         <td class="border border-slate-300 w-2/8"><%= reminder.page_number %></td>
         <td class="border border-slate-300 w-3/8"><%= reminder.created_at %></td>
-        <td class="border border-slate-300 w-3/8"><a href="/reminders/<%= reminder.id %>">Edit</a></td>
+        <td class="border border-slate-300 w-3/8">
+          <%= link_to "Edit", edit_reminder_path(reminder) %>
+        </td>
+        <td class="border border-slate-300 w-3/8">
+          <%= link_to "Destroy", reminder_path(reminder), data: {
+            turbo_method: :delete,
+            turbo_confirm: "Are you sure?"
+          } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
